--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" />
+    <title>Calculadora financeira</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <meta name="author" content="Ermeson Sampaio" />
+    <meta name="description" content="Calculadora de valores corrigidos pela inflação histórica do Brasil" />
+    <meta name="keywords" content="IPCA, Inflação, Valor corrigido pela inflação, Inflação Brasil, Brasil" />
   </head>
   <body>
     <div id="app"></div>
