--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Ermeson Sampaio" />
     <meta name="description" content="Calculadora de valores corrigidos pela inflação histórica do Brasil" />
     <meta name="keywords" content="IPCA, Inflação, Valor corrigido pela inflação, Inflação Brasil, Brasil" />
+    <meta name="google-site-verification" content="JKrELJhpzqGnlyoMyHFqouM05rYMQJmt95faOCf7cSY" />
   </head>
   <body>
     <div id="app"></div>
