--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="pt-BR">
   <head>
-    <title>Calculadora financeira</title>
+    <title>Calculadora de Correção pela Inflação - Atualize Valores com o IPCA</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ermeson Sampaio" />
-    <meta name="description" content="Calculadora de valores corrigidos pela inflação histórica do Brasil" />
-    <meta name="keywords" content="IPCA, Inflação, Valor corrigido pela inflação, Inflação Brasil, Brasil" />
+    <meta name="description" content="Corrija valores pela inflação utilizando o IPCA. Calcule facilmente a atualização monetária de qualquer período com dados confiáveis e explicações detalhadas." />
+    <meta name="keywords" content="calculadora inflação, correção monetária, IPCA, atualização de valores, índice de preços, cálculo inflação, correção pela inflação, inflação Brasil, IPCA mensal, Banco Central, IBGE" />
     <meta name="google-site-verification" content="JKrELJhpzqGnlyoMyHFqouM05rYMQJmt95faOCf7cSY" />
   </head>
   <body>
