--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="pt-BR">
   <head>
-    <title>Calculadora de Correção pela Inflação - Atualize Valores com o IPCA</title>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Tools Invest</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ermeson Sampaio" />
