--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="pt-BR">
   <head>
     <title>Tools Invest</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ermeson Sampaio" />
     <meta name="description" content="Corrija valores pela inflação utilizando o IPCA. Calcule facilmente a atualização monetária de qualquer período com dados confiáveis e explicações detalhadas." />
     <meta name="keywords" content="calculadora inflação, correção monetária, IPCA, atualização de valores, índice de preços, cálculo inflação, correção pela inflação, inflação Brasil, IPCA mensal, Banco Central, IBGE" />
     <meta name="google-site-verification" content="JKrELJhpzqGnlyoMyHFqouM05rYMQJmt95faOCf7cSY" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div id="app"></div>
