feat: use SSG rendering

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Tools Invest</title>
     <meta charset="UTF-8" />
+    <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ermeson Sampaio" />
     <meta name="description" content="Corrija valores pela inflação utilizando o IPCA. Calcule facilmente a atualização monetária de qualquer período com dados confiáveis e explicações detalhadas." />
