--- a/correcao-de-valor-pela-inflacao.html
+++ b/correcao-de-valor-pela-inflacao.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <script type="module" async="" crossorigin="" src="/assets/app-DcbuZC86.js"></script>
+    <script type="module" async="" crossorigin="" src="/assets/app-BEcRsmXJ.js"></script>
     <link rel="stylesheet" crossorigin="" href="/assets/app-D-iy7rN1.css">
   </head>
   <body>
